examples/errors/reserved.stlc
__add : Int -> Int
__add = fun x : Int, x
